Java19, virtual threads
Processed total: 438, mills: 510859